--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Latest Points Allocation</title>
+    <title>Latest Points Rankings</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -58,12 +58,8 @@
 <body>
 
 <header>
-    <h1>Latest Points Allocation</h1>
+    <h1>Latest Points Rankings</h1>
 </header>
-    
-<section>
-    <div class="sub-header">Player Points Allocation From Match Week 1. Curzon PH (A).</div>
-</section>
     
 <section>
     <table>
@@ -72,92 +68,83 @@
                 <th>#</th>
                 <th>Player</th>
                 <th>Points</th>
-                <th>Reason</th>
             </tr>
         </thead>
         <tbody>
             <tr>
                 <td>1</td>
-                <td>Michael Urbacz</td>
-                <td>0</td>
-                <td>n/a</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>James I'Anson</td>
-                <td>3</td>
-                <td>Play one game and win</td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>Andy Saxton</td>
-                <td>3</td>
-                <td>Play one game and win</td>
-            </tr>
-            <tr>
-                <td>4</td>
-                <td>Andy Saxton</td>
-                <td>3</td>
-                <td>Play one game and win</td>
-            </tr>
-                <td>4</td>
-                <td>Max Newton</td>
-                <td>0</td>
-                <td>n/a</td>
-            </tr>
-            <tr>
-                <td>5</td>
-                <td>Shaun Edwards</td>
-                <td>3</td>
-                <td>Play one game and win</td>
-            </tr>
-            <tr>
-                <td>6</td>
-                <td>John James</td>
-                <td>3</td>
-                <td>Play one game and win</td>
-            </tr>
-            <tr>
-                <td>7</td>
-                <td>Olly Brooks</td>
-                <td>0</td>
-                <td>n/a</td>
-            </tr>
-            <tr>
-                <td>8</td>
-                <td>Dean Nixon</td>
-                <td>0</td>
-                <td>n/a</td>
-            </tr>
-            <tr>
-                <td>9</td>
                 <td>Gaz Rogers</td>
                 <td>4</td>
-                <td>Winning a decider</td>
             </tr>
             <tr>
-                <td>10</td>
+                <td>~2</td>
+                <td>Andy Saxton</td>
+                <td>3</td>
+            </tr>
+            <tr>
+                <td>~2</td>
+                <td>James I'Anson</td>
+                <td>3</td>
+            </tr>
+            <tr>
+                <td>~2</td>
+                <td>John James</td>
+                <td>3</td>
+            </tr>
+            <tr>
+                <td>~2</td>
+                <td>Shaun Edwards</td>
+                <td>3</td>
+            </tr>
+            <tr>
+                <td>~3</td>
                 <td>Carl Bilbey</td>
                 <td>1</td>
-                <td>None playing attendee</td>
             </tr>
             <tr>
-                <td>11</td>
-                <td>Greg Crowson</td>
-                <td>1</td>
-                <td>None playing attendee</td>
-            </tr>
-            <tr>
-                <td>12</td>
+                <td>~3</td>
                 <td>Matt Keys</td>
                 <td>1</td>
-                <td>None playing attendee</td>
             </tr>
             <tr>
-                <td>13</td>
+                <td>~3</td>
+                <td>Greg Crowson</td>
+                <td>1</td>
+            </tr>
+            <tr>
+                <td>~3</td>
                 <td>Sean Day</td>
                 <td>1</td>
-                <td>None playing attendee</td>
+            </tr>
+            <tr>
+                <td>~4</td>
+                <td>Dean Nixon</td>
+                <td>0</td>
+            </tr>
+            <tr>
+                <td>~4</td>
+                <td>Max Newton</td>
+                <td>0</td>
+            </tr>
+            <tr>
+                <td>~4</td>
+                <td>Michael Urbacz</td>
+                <td>0</td>
+            </tr>
+            <tr>
+                <td>~4</td>
+                <td>Olly Brooks Nixon</td>
+                <td>0</td>
+            </tr>
+            <tr>
+                <td>~5</td>
+                <td>Dale Smith</td>
+                <td>0</td>
+            </tr>
+            <tr>
+                <td>~5</td>
+                <td>Ed Pidduck</td>
+                <td>0</td>
             </tr>
         </tbody>
     </table>
