--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             </tr>
             <tr>
                 <td>~4</td>
-                <td>Olly Brooks Nixon</td>
+                <td>Olly Brooks</td>
                 <td>0</td>
             </tr>
             <tr>
