--- a/index.html
+++ b/index.html
@@ -141,6 +141,16 @@
                 <td>Dale Smith</td>
                 <td>4</td>
             </tr>
+            <tr>
+                <td>~13</td>
+                <td>Dez Tolliday</td>
+                <td>0</td>
+            </tr>
+            <tr>
+                <td>~13</td>
+                <td>Phil Connolly Smith</td>
+                <td>0</td>
+            </tr>
         </tbody>
     </table>
 </section>
