--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             </tr>
             <tr>
                 <td>~13</td>
-                <td>Phil Connolly Smith</td>
+                <td>Phil Connolly</td>
                 <td>0</td>
             </tr>
         </tbody>
