--- a/index.html
+++ b/index.html
@@ -74,82 +74,82 @@
             <tr>
                 <td>1</td>
                 <td>Max Newton</td>
-                <td>29</td>
+                <td>32</td>
             </tr>
             <tr>
-                <td>~2</td>
-                <td>Andy Saxton</td>
-                <td>23</td>
-            </tr>
-            <tr>
-                <td>~2</td>
+                <td>2</td>
                 <td>John James</td>
-                <td>23</td>
+                <td>26</td>
             </tr> 
             <tr>
                 <td>3</td>
                 <td>Olly Brooks</td>
-                <td>22</td>
+                <td>25</td>
+            </tr>
+            <tr>
+                <td>~4</td>
+                <td>Andy Saxton</td>
+                <td>23</td>
             </tr>
             <tr>
                 <td>~4</td>
                 <td>Gaz Rogers</td>
-                <td>20</td>
-            </tr>
-            <tr>
-                <td>~4</td>
-                <td>Shaun Edwards</td>
-                <td>20</td>
+                <td>23</td>
             </tr>
             <tr>
                 <td>~5</td>
                 <td>Dean Nixon</td>
-                <td>17</td>
+                <td>20</td>
             </tr>
             <tr>
                 <td>~5</td>
+                <td>Shaun Edwards</td>
+                <td>20</td>
+            </tr>
+            <tr>
+                <td>6</td>
                 <td>James I'Anson</td>
                 <td>17</td>
             </tr>
             <tr>
-                <td>6</td>
+                <td>7</td>
                 <td>Carl Bilbey</td>
-                <td>15</td>
+                <td>16</td>
             </tr>
             <tr>
-                <td>7</td>
+                <td>8</td>
                 <td>Matt Keys</td>
                 <td>14</td>
             </tr>
             <tr>
-                <td>~8</td>
+                <td>~9</td>
                 <td>Michael Urbacz</td>
-                <td>12</td>
+                <td>13</td>
             </tr>
             <tr>
-                <td>~8</td>
+                <td>~9</td>
                 <td>Sean Day</td>
-                <td>12</td>
+                <td>13</td>
             </tr>
             <tr>
-                <td>9</td>
+                <td>10</td>
                 <td>Greg Crowson</td>
                 <td>10</td>
             </tr>
             <tr>
-                <td>10</td>
-                <td>Dale Smith</td>
-                <td>4</td>
-            </tr>
-            <tr>
-                <td>1</td>
+                <td>11</td>
                 <td>Phil Connolly</td>
-                <td>3</td>
+                <td>6</td>
             </tr>
             <tr>
-                <td>12</td>
-                <td>Dez Tolliday</td>
-                <td>0</td>
+                <td>~12</td>
+                <td>Dale Smith</td>
+                <td>5</td>
+            </tr>
+            <tr>
+                <td>~12</td>
+                <td>Des Tolliday</td>
+                <td>5</td>
             </tr>
         </tbody>
     </table>
