--- a/index.html
+++ b/index.html
@@ -67,94 +67,101 @@
             <tr>
                 <th>#</th>
                 <th>Player</th>
+                <th>Games</th>
                 <th>Points</th>
             </tr>
         </thead>
         <tbody>
             <tr>
                 <td>~1</td>
-                <td>Max Newton</td>
-                <td>34</td>
+                <td>Andy Saxton</td>
+                <td>1</td>
+                <td>3</td>
+            </tr>
+            <tr>
+                <td>~1</td>
+                <td>Carl Bilbey</td>
+                <td>1</td>
+                <td>3</td>
+            </tr>
+            <tr>
+                <td>~1</td>
+                <td>Des Tolliday</td>
+                <td>1</td>
+                <td>3</td>
+            </tr>
+            <tr>
+                <td>~1</td>
+                <td>James I'Anson</td>
+                <td>1</td>
+                <td>3</td>
+            </tr>
+            <tr>
+                <td>~1</td>
+                <td>John James</td>
+                <td>1</td>
+                <td>3</td>
+            </tr>
+            <tr>
+                <td>~1</td>
+                <td>Matt Keys</td>
+                <td>1</td>
+                <td>3</td>
             </tr>
             <tr>
                 <td>~1</td>
                 <td>Olly Brooks</td>
-                <td>34</td>
+                <td>1</td>
+                <td>3</td>
             </tr>
             <tr>
-                <td>~2</td>
-                <td>John James</td>
-                <td>27</td>
-            </tr> 
-            <tr>
-                <td>~2</td>
-                <td>Shaun Edwards</td>
-                <td>27</td>
-            </tr>
-            <tr>
-                <td>~2</td>
-                <td>Andy Saxton</td>
-                <td>27</td>
+                <td>2</td>
+                <td>Greg Crowson</td>
+                <td>2</td>
+                <td>2</td>
             </tr>
             <tr>
                 <td>3</td>
-                <td>Gaz Rogers</td>
-                <td>25</td>
-            </tr>
-            <tr>
-                <td>4</td>
-                <td>Dean Nixon</td>
-                <td>24</td
-            </tr>
-            <tr>
-                <td>5</td>
-                <td>Carl Bilbey</td>
-                <td>20</td>
-            </tr>
-            <tr>
-                <td>6</td>
-                <td>Matt Keys</td>
-                <td>19</td>
-            </tr>
-            <tr>
-                <td>7</td>
-                <td>James I'Anson</td>
-                <td>17</td>
-            </tr>
-            <tr>
-                <td>8</td>
-                <td>Sean Day</td>
-                <td>15</td>
-            </tr>
-            <tr>
-                <td>~9</td>
-                <td>Greg Crowson</td>
-                <td>14</td>
-            </tr>
-            <tr>
-                <td>~9</td>
                 <td>Michael Urbacz</td>
-                <td>14</td>
+                <td>0</td>
+                <td>1</td>
             </tr>
             <tr>
-                <td>10</td>
-                <td>Phil Connolly</td>
-                <td>12</td>
+                <td>~4</td>
+                <td>Clint I'Anson</td>
+                <td>0</td>
+                <td>0</td>
             </tr>
             <tr>
-                <td>11</td>
-                <td>Des Tolliday</td>
-                <td>11</td>
-            </tr>
-            <tr>
-                <td>12</td>
+                <td>~4</td>
                 <td>Dale Smith</td>
-                <td>6</td>
+                <td>0</td>
+                <td>0</td>
             </tr>
+            <tr>
+                <td>~4</td>
+                <td>Dean Nixon</td>
+                <td>0</td>
+                <td>0</td>
+            </tr>
+            <tr>
+                <td>~4</td>
+                <td>Phil Connolly</td>
+                <td>0</td>
+                <td>0</td>
+            </tr>
+            <tr>
+                <td>~4</td>
+                <td>Sean Day</td>
+                <td>0</td>
+                <td>0</td>
+            </tr>
+
         </tbody>
     </table>
 </section>
 <p><a href="https://starpool2025.github.io/form-curr/" class="button-link">Back</a></p>
 </body>
 </html>
+
 
