--- a/index.html
+++ b/index.html
@@ -146,6 +146,11 @@
             </tr>
             <tr>
                 <td>~4</td>
+                <td>Gaz Rogers</td>
+                <td>0</td>
+                <td>0</td>
+            <tr>
+                <td>~4</td>
                 <td>Phil Connolly</td>
                 <td>0</td>
                 <td>0</td>
@@ -163,5 +168,6 @@
 <p><a href="https://starpool2025.github.io/form-curr/" class="button-link">Back</a></p>
 </body>
 </html>
+
 
 
